# shared-memory-game

./: CMakeLists.txt  READ.md  README.md  client  client.c  client.h  client_common.h  client_sdl.c  client_sdl.h  game_common.h  main.c  manager  manager.c  sdltest.c
src/: problem.csv
